--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@testing-library/dom": "^7.21.4",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -18,6 +19,7 @@
     "react-slick": "^0.29.0",
     "sass": "^1.68.0",
     "slick-carousel": "^1.8.1",
+    "typescript": "^5.2.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
